--- a/mobile/base.css
+++ b/mobile/base.css
@@ -56,7 +56,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     font-family:inherit;
     font-size:100%;
 }
-dfn,i,cite,var,address,em {
+dfn,cite,var,address,em {
     font-style:normal;
 }
 th,h1,h2,h3,h4,h5,h6 {
@@ -834,7 +834,8 @@ html[dir=rtl] .owm_sidebar_right_active #main {
 .owm_nav_left_item_icon {
     margin: 0px 42px 0px 0px;
 }
-.owm_nav_left_item .owm_nav_left_item_add {
+.owm_nav_left_item .owm_nav_left_item_add,
+.owm_nav_left_item_add {
     height: 30px;
     width: 35px;
     float: right;
@@ -2819,7 +2820,7 @@ input.owm_sidebar_profile_logout {
     padding: 5px;
 }
 .owm_box_menu, .owm_box_toolbar {
-    padding: 11px 12px 11px 0;
+    padding: 11px 12px 11px 12px;
 }
 .owm_box_toolbar {
     text-align: right;
@@ -3066,11 +3067,13 @@ only screen and (min-device-pixel-ratio : 2) {
     right: -15px;
     top: 32px;
 }
-.owm_btn_list_item_wrap .owm_context_pos_right {
+.owm_btn_list_item_wrap .owm_context_pos_right,
+.owm_topic_name .owm_context_pos_right {
     right: -3px;
     top: 47px;
 }
-.owm_btn_list_item_wrap .owm_context_arr_down {
+.owm_btn_list_item_wrap .owm_context_arr_down,
+.owm_topic_name .owm_context_arr_down {
     background: #DEDEDE;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -3096,12 +3099,14 @@ only screen and (min-device-pixel-ratio : 2) {
     background: url(images/arr_down_nsf.png) no-repeat 0px 5px;
     vertical-align: top;    
 }
-.owm_btn_list_item_wrap .owm_context_arr_c {
+.owm_btn_list_item_wrap .owm_context_arr_c,
+.owm_topic_name .owm_context_arr_c {
     background: url(images/arr_down_btn_list.png) no-repeat center 12px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
 only screen and (min-device-pixel-ratio : 2) {
-    .owm_btn_list_item_wrap .owm_context_arr_c {
+    .owm_btn_list_item_wrap .owm_context_arr_c,
+    .owm_topic_name .owm_context_arr_c {
        background-image: url(images/arr_down_btn_list_2x.png);
        background-size: 17px 12px;
     }
@@ -3699,19 +3704,30 @@ only screen and (min-device-pixel-ratio : 2) {
     background: #b2b2b2;
     margin-top: -8px;
 }
+.owm_section.owm_std_margin_bottom {
+    margin-bottom: 10px;
+}
 .ow_radio_group li,
 .ow_checkbox_group li {
     float: left;
     width: 49%;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .ow_radio_group,
 .ow_checkbox_group {
     margin: 3px 3px 3px 8px;
 }
+.ow_radio_group li:last-child,
+.ow_checkbox_group li:last-child {
+    margin-bottom: 0px;
+}
 .owm_checkbox_wrap,
 .owm_radio_wrap {
     padding: 3px;
+}
+input[type="checkbox"] ~ label,
+input[type="radio"] ~ label {
+    vertical-align: text-top;
 }
 .owm_field_error .owm_form_label,
 .owm_field_required .owm_form_label {
@@ -3728,10 +3744,494 @@ only screen and (min-device-pixel-ratio : 2) {
 }
 .owm_error_txt {
     color: #ff0000;
-    padding: 5px 5px 5px 10px;
     font-size: 75%;
+}
+.owm_error_txt span {
+    display: inline-block;
+    padding: 5px 5px 5px 10px;
 }
 .owm_simple_checkbox {
     margin: 3px 8px 0px;
 }
 /* ======== End of the Join form ======== */
+/* ======== Forum styles styles ======== */
+.owm_search_field {
+    margin: 14px;
+}
+.owm_floatbox_wrap .owm_search_field {
+    margin-bottom: 0;
+}
+.owm_search_field textarea {
+    height: 49px;
+    padding-right: 41px;
+    background-color: transparent;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    border: 1px solid #ccc;
+}
+.owm_floatbox_wrap .owm_search_field textarea {
+    height: auto;
+    padding: 15px;
+}
+.owm_search_field_icon {
+    background: url(images/ico_search.png) no-repeat left center;
+    width: 32px;
+    height: 49px;
+    margin-left: -32px;
+    position: relative;
+    float: right;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_search_field_icon {
+            background-image: url(images/ico_search@2x.png);
+            background-size: 100% auto;
+        }
+}
+.owm_forum_nav_right {
+    display: block;
+    height: 35px;
+    width: 23px;
+    background: url(images/arr_right_grey.png) no-repeat right center;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_forum_nav_righ {
+            background-image: url(images/arr_right_grey@2x.png);
+            background-size: 100% auto;
+        }
+}
+.owm_forum_nav_left {
+    display: block;
+    height: 35px;
+    width: 23px;
+    background: url(images/arr_left_grey.png) no-repeat right center;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_forum_nav_left {
+            background-image: url(images/arr_left_grey@2x.png);
+            background-size: 100% auto;
+        }
+}
+a.owm_forum_list_format,
+a.owm_topic_list_format {
+    padding: 4px;
+    display: block;
+    color: #929292;
+}
+a.owm_forum_list_format.owm_forum_list_unread,
+a.owm_topic_list_format.owm_topic_list_unread {
+    color: #626262;
+}
+.owm_forum_name,
+.owm_topic_name {
+    font-size: 114.3%;
+    font-weight: bold;
+}
+.owm_forum_name {
+    padding-right: 40px;
+}
+.owm_topic_name {
+    padding-right: 66px;
+}
+.owm_forum_counter {
+    margin-right: -40px;
+    font-weight: normal;
+}
+.owm_topic_name .owm_forum_counter {
+    padding-left: 26px;
+    margin-right: -66px;
+    background: url(images/ico_comment.png) left center no-repeat;
+}
+.owm_topic_list_unread .owm_topic_name .owm_forum_counter {
+    background: url(images/ico_comment_orange.png) left center no-repeat;
+}
+.owm_topic_list_format.owm_topic_list_locked .owm_topic_name .owm_forum_counter {
+    background: url(images/ico_comment_locked.png) left center no-repeat;
+}
+.owm_topic_list_format.owm_topic_list_locked.owm_topic_list_unread .owm_topic_name .owm_forum_counter {
+    background: url(images/ico_comment_orange_locked.png) left center no-repeat;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_topic_name .owm_forum_counter {
+            background-image: url(images/ico_comment@2x.png);
+            background-size: 21px 20px;
+        }
+        .owm_topic_list_unread .owm_topic_name .owm_forum_counter {
+            background-image: url(images/ico_comment_orange@2x.png);
+            background-size: 21px 20px;
+        }
+        .owm_topic_list_format.owm_topic_list_locked .owm_topic_name .owm_forum_counter {
+            background-image: url(images/ico_comment_locked@2x.png);
+            background-size: 21px 20px;
+        }
+        .owm_topic_list_format.owm_topic_list_locked.owm_topic_list_unread .owm_topic_name .owm_forum_counter {
+            background-image: url(images/ico_comment_orange_locked@2x.png);
+            background-size: 21px 20px;
+        }
+}
+.owm_forum_additional_info {
+    padding-left: 16px;
+    padding-right: 16px;
+    font-size: 68.75%;
+    font-weight: bold;
+    text-align: left;
+    color: #929292;
+}
+.owm_forum_list_unread.owm_forum_additional_info {
+    color: #626262;
+}
+.owm_forum_additional_item {
+    padding-left: 18px;
+    margin-right: 12px;
+    background-position: left center;
+    background-repeat: no-repeat;
+    display: inline-block;
+}
+.owm_forum_additional_info span a {
+    font-size: 100%;
+    padding: 0 5px;
+}
+.owm_forum_additional_comments {
+    background-image: url(images/ico_comment_small.png);
+}
+.owm_forum_additional_date {
+    background-image: url(images/ico_time_small.png);
+    background-position: 5px center;
+}
+.owm_forum_additional_views {
+    background-image: url(images/ico_eye_small.png);
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_forum_additional_comments {
+            background-image: url(images/ico_comment_small@2x.png);
+            background-size: 11px 11px;
+        }
+        .owm_forum_additional_date {
+            background-image: url(images/ico_time_small@2x.png);
+            background-size: 9px 9px;
+        }
+        .owm_forum_additional_views {
+            background-image: url(images/ico_eye_small@2x.png);
+            background-size: 9px 9px;
+        }
+}
+.owm_forum_page h3 {
+    padding-left: 14px;
+}
+.owm_forum_section h3 {
+    padding-left: 0;
+}
+.owm_forum_page .owm_box_menu {
+    padding-right: 14px;
+}
+.owm_forum_page .owm_box_body {
+    border-bottom: none;
+}
+.owm_forum_page .owm_box_bottom {
+    border-bottom: 1px solid #e8e8e8;
+    border-top: 1px solid #e8e8e8;
+}
+.owm_forum_section .owm_box {
+    border-top: none;
+}
+.owm_forum_section .owm_box_cap {
+    border-bottom: 1px solid #b5b5b5;
+}
+.owm_forum_section .owm_box_body {
+    border-top: 1px solid #b5b5b5;
+}
+.owm_forum_page .owm_nav_left_item_add {
+    margin: 13px 11px 0 0;
+}
+.owm_topic_sticky_icon,
+.owm_topic_attach_icon {
+    width: 13px;
+    height: 13px;
+    float: left;
+    margin-top: 4px;
+    margin-right: 6px;
+}
+.owm_topic_sticky_icon {
+    background: url(images/ico_forum_sticky.png) center center no-repeat;
+}
+.owm_topic_attach_icon {
+    background: url(images/ico_forum_attach.png) center center no-repeat;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_topic_sticky_icon {
+            background-image: url(images/ico_forum_sticky@2x.png);
+            background-size: 12px 13px;
+        }
+        .owm_topic_attach_icon {
+            background-image: url(images/ico_forum_attach@2x.png);
+            background-size: 11px 13px;
+        }
+}
+.owm_topics_sticky {
+    margin-bottom: 16px;
+}
+.owm_topics_sticky .owm_box_bottom:last-child {
+    border-bottom: 1px solid #b5b5b5;
+}
+.owm_forum_search_form {
+    padding-top: 8px;
+}
+/* ======== Wysiwyg ======== */
+.owm_wysiwyg_toolbar ul li {
+    float: left;
+}
+.owm_wysiwyg_toolbar a {
+    display: inline-block;
+    width: 28px;
+    height: 28px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px 1px 1px 0px;
+    background-color: #fff;
+    background-position: center center;
+    background-repeat: no-repeat;
+    vertical-align: top;
+}
+.owm_wysiwyg_toolbar ul li:first-child a {
+    border-left-width: 1px;
+}
+.owm_wysiwyg_toolbar .owm_wysiwyg_b_hover, 
+.owm_wysiwyg_toolbar .owm_wysiwyg_i_hover,
+.owm_wysiwyg_toolbar .owm_wysiwyg_u_hover,
+.owm_wysiwyg_toolbar .owm_wysiwyg_link_hover,
+.owm_wysiwyg_toolbar .owm_wysiwyg_photo_hover,
+.owm_wysiwyg_toolbar .owm_wysiwyg_video_hover {
+    background-color: #ff7000; 
+}
+.owm_wysiwyg_b {
+    background-image: url(images/ico_wysiwyg_b.png);
+}
+.owm_wysiwyg_i {
+    background-image: url(images/ico_wysiwyg_i.png);
+}
+.owm_wysiwyg_u {
+    background-image: url(images/ico_wysiwyg_u.png);
+}
+.owm_wysiwyg_link {
+    background-image: url(images/ico_wysiwyg_link.png);
+}
+.owm_wysiwyg_photo {
+    background-image: url(images/ico_wysiwyg_photo.png);
+}
+.owm_wysiwyg_video {
+    background-image: url(images/ico_wysiwyg_video.png);
+}
+.owm_wysiwyg_b_hover {
+    background-image: url(images/ico_wysiwyg_b_hover.png);
+}
+.owm_wysiwyg_i_hover {
+    background-image: url(images/ico_wysiwyg_i_hover.png);
+}
+.owm_wysiwyg_u_hover {
+    background-image: url(images/ico_wysiwyg_u_hover.png);
+}
+.owm_wysiwyg_link_hover {
+    background-image: url(images/ico_wysiwyg_link_hover.png);
+}
+.owm_wysiwyg_photo_hover {
+    background-image: url(images/ico_wysiwyg_photo_hover.png);
+}
+.owm_wysiwyg_video_hover {
+    background-image: url(images/ico_wysiwyg_video_hover.png);
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_wysiwyg_b {
+            background-image: url(images/ico_wysiwyg_b@2x.png);
+            background-size: 10px 11px;
+        }
+        .owm_wysiwyg_i {
+            background-image: url(images/ico_wysiwyg_i@2x.png);
+            background-size: 5px 11px;
+        }
+        .owm_wysiwyg_u {
+            background-image: url(images/ico_wysiwyg_u@2x.png);
+            background-size: 10px 11px;
+        }
+        .owm_wysiwyg_link {
+            background-image: url(images/ico_wysiwyg_link@2x.png);
+            background-size: 14px 11px;
+        }
+        .owm_wysiwyg_photo {
+            background-image: url(images/ico_wysiwyg_photo@2x.png);
+            background-size: 15px 11px;
+        }
+        .owm_wysiwyg_video {
+            background-image: url(images/ico_wysiwyg_video@2x.png);
+            background-size: 12px 11px;
+        }
+        .owm_wysiwyg_b_hover {
+            background-image: url(images/ico_wysiwyg_b_hover@2x.png);
+        }
+        .owm_wysiwyg_i_hover {
+            background-image: url(images/ico_wysiwyg_i_hover@2x.png);
+        }
+        .owm_wysiwyg_u_hover {
+            background-image: url(images/ico_wysiwyg_u_hover@2x.png);
+        }
+        .owm_wysiwyg_link_hover {
+            background-image: url(images/ico_wysiwyg_link_hover@2x.png);
+        }
+        .owm_wysiwyg_photo_hover {
+            background-image: url(images/ico_wysiwyg_photo_hover@2x.png);
+        }
+        .owm_wysiwyg_video_hover {
+            background-image: url(images/ico_wysiwyg_video_hover@2x.png);
+        }
+}
+/* ======== Forum topic ======== */
+.owm_forum_topic_input {
+    min-height: 32px;
+}
+.owm_forum_topic_body {
+    border-top: 1px solid #b9b9b9;
+}
+.owm_forum_topic_bottom {
+    border-top: 1px solid #d7d7d7;
+}
+.owm_forum_topic_title input[type=text] {
+    border-color: #d7d7d7;
+    border-bottom-width: 1px;
+    border-top-width: 0px;
+}
+.owm_forum_name_select {
+    font-size: 114.3%;
+}
+.owm_forum_name_select select {
+    width: 100%;
+    max-width: 100%;
+}
+.owm_forum_topic_subscribe {
+    border-bottom: 1px solid #d7d7d7;
+}
+.owm_forum_topic_subscribe .ow_checkbox_group,
+.owm_forum_topic_subscribe .owm_checkbox_wrap {
+    margin-top: 0px;
+    padding-top: 0px;
+}
+.owm_forum_topic_subscribe .ow_checkbox_group li {
+    width: 100%;
+}
+.owm_link_field input[type=text],
+.owm_video_field input[type=text] {
+    border-color: #d7d7d7;
+    box-shadow: none;
+    border-bottom-width: 1px;
+    color: #3f7fb8;
+    text-decoration: underline;
+}
+.owm_link_text input[type=text]:first-child,
+.owm_video_field input[type=text]:first-child {
+    border-top-width: 0px;
+}
+.owm_link_field input[type=text].invitation,
+.owm_video_field input[type=text].invitation {
+    color: #A9A9A9;
+    text-decoration: none;
+}
+.owm_video_attach_preview,
+.owm_photo_attach_preview {
+    padding-top: 28px;
+    position: relative;
+    min-height: 150px;
+}
+.owm_attach_preview_cont {
+    display: block;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.owm_attach_preview_cont img {
+    width: 56.2%;
+    vertical-align: top;
+}
+.owm_attach_preview_close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 28px;
+    height: 28px;
+    background: #b9b9b9 url(images/ico_close_prev.png) no-repeat center center;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_attach_preview_close {
+            background-image: url(images/ico_close_prev@2x.png);
+            background-size: 12px 12px;
+        }
+}
+.owm_attach_preview_icon {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: url(images/ico_video_play.png) no-repeat center center;
+}
+.owm_attach_label {
+    display: block;
+    overflow: hidden;
+    position: relative;
+    margin: 0px;
+    color: #acacac;
+    padding-right: 19px;
+}
+.owm_attach_label [type=file] {
+    cursor: pointer;
+    display: block;
+    font-size: 999px;
+    filter: alpha(opacity=0);
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+}
+.owm_forum_topic_attach_info {
+    padding-top: 5px;
+}
+.owm_forum_topic_attach_info .owm_topic_attach_icon {
+    padding-left: 19px;
+    width: auto;
+    height: auto;
+    float: none;
+    background-position: left center;
+}
+.owm_forum_topic_attach_info span {
+    color: #313131;
+}
+.owm_attach_label .owm_attach_preview_close {
+    width: 12px;
+    height: 17px;
+    right: 0px;
+    top: 0px;
+    background-color: transparent;
+    background-image: url(images/ico_close_attach.png);
+    z-index: 2;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        background-image: url(images/ico_close_attach@2x.png);
+}
+/* ======== Forum topic view ======== */
+.owm_forum_topic_view .owm_topic_name.owm_padding {
+    padding-bottom: 0px;
+    padding-right: 10px;
+}
+.owm_forum_topic_date {
+    padding-left: 10px;
+    font-size: 68.75%;
+}
