--- a/mobile/base.css
+++ b/mobile/base.css
@@ -326,6 +326,40 @@ only screen and (min-device-pixel-ratio : 2) {
         font-size: 100%;
     }
 }
+.owm_nav_cap_left {
+    display: block;
+    height: 35px;
+    width: 23px;
+    padding: 11px;
+    background: url(images/arr_left_grey.png) no-repeat center center;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_nav_cap_left {
+            background-image: url(images/arr_left_grey@2x.png);
+            background-size: 10px 17px;
+        }
+}
+.owm_nav_cap_right {
+    display: block;
+    height: 35px;
+    width: 23px;
+    padding: 11px;
+    background: url(images/arr_right_grey.png) no-repeat center center;
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-pixel-ratio : 2) { 
+        .owm_nav_cap_right {
+            background-image: url(images/arr_right_grey@2x.png);
+            background-size: 10px 17px;
+        }
+}
+.owm_nav_cap_left_space {
+    padding-left: 10px;
+}
+.owm_nav_cap_rigth_space {
+    padding-right: 10px;
+}
 footer {
     bottom: 0px;
 }
@@ -2810,7 +2844,8 @@ input.owm_sidebar_profile_logout {
     background-color: #f4f4f4;
 }
 .owm_box_cap h3,
-.owm_box_cap_empty h3 {
+.owm_box_cap_empty h3,
+.owm_nav_cap h3 {
     display: inline-block;
     font-family: 'open_sansbold', "Helvetica CY", "Arial Black", "Nimbus Sans L", sans-serif;
     font-size: 125%;
@@ -3076,13 +3111,13 @@ only screen and (min-device-pixel-ratio : 2) {
     top: 32px;
 }
 .owm_btn_list_item_wrap .owm_context_pos_right,
-.owm_card_cap .owm_context_pos_right,
+.owm_nav_cap .owm_context_pos_right,
 .owm_card_header .owm_context_pos_right {
     right: -3px;
     top: 47px;
 }
 .owm_btn_list_item_wrap .owm_context_arr_down,
-.owm_card_cap .owm_context_arr_down,
+.owm_nav_cap .owm_context_arr_down,
 .owm_card_header .owm_context_arr_down {
     background: #DEDEDE;
     -webkit-border-radius: 4px;
@@ -3110,14 +3145,14 @@ only screen and (min-device-pixel-ratio : 2) {
     vertical-align: top;    
 }
 .owm_btn_list_item_wrap .owm_context_arr_c,
-.owm_card_cap .owm_context_arr_c,
+.owm_nav_cap .owm_context_arr_c,
 .owm_card_header .owm_context_arr_c {
     background: url(images/arr_down_btn_list.png) no-repeat center 12px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
 only screen and (min-device-pixel-ratio : 2) {
     .owm_btn_list_item_wrap .owm_context_arr_c,
-    .owm_card_cap .owm_context_arr_c,
+    .owm_nav_cap .owm_context_arr_c,
     .owm_card_header .owm_context_arr_c {
        background-image: url(images/arr_down_btn_list_2x.png);
        background-size: 17px 12px;
@@ -3773,7 +3808,8 @@ input[type="radio"] ~ label {
 .owm_floatbox_wrap .owm_search_field {
     margin-bottom: 0;
 }
-.owm_search_field textarea {
+.owm_search_field textarea,
+.owm_search_field input[type=text] {
     height: 49px;
     padding-right: 41px;
     background-color: transparent;
@@ -3798,32 +3834,6 @@ input[type="radio"] ~ label {
        only screen and (min-device-pixel-ratio : 2) { 
         .owm_search_field_icon {
             background-image: url(images/ico_search@2x.png);
-            background-size: 100% auto;
-        }
-}
-.owm_forum_nav_right {
-    display: block;
-    height: 35px;
-    width: 23px;
-    background: url(images/arr_right_grey.png) no-repeat right center;
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2),
-       only screen and (min-device-pixel-ratio : 2) { 
-        .owm_forum_nav_righ {
-            background-image: url(images/arr_right_grey@2x.png);
-            background-size: 100% auto;
-        }
-}
-.owm_forum_nav_left {
-    display: block;
-    height: 35px;
-    width: 23px;
-    background: url(images/arr_left_grey.png) no-repeat right center;
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2),
-       only screen and (min-device-pixel-ratio : 2) { 
-        .owm_forum_nav_left {
-            background-image: url(images/arr_left_grey@2x.png);
             background-size: 100% auto;
         }
 }
@@ -4310,19 +4320,19 @@ a.owm_topic_list_format.owm_topic_list_unread {
 }
 /* ======== End of the Forum topic view ======== */
 /* ======== Card styles ======== */
-.owm_card_cap,
+.owm_nav_cap,
 .owm_card_header {
     position: relative;    
 }
-.owm_card_cap_context,
+.owm_nav_cap_context,
 .owm_card_user_context {
-    padding-right: 44px;
+    padding-right: 54px;
 }
-.owm_card_cap_context .owm_view_more,
+.owm_nav_cap_context .owm_view_more,
 .owm_card_user_context~.owm_view_more {
     position: absolute;
     top: 12px;
-    right: 0px;
+    right: 10px;
     min-width: 42px;
 }
 .owm_card_title {
